test/cli/test/ack/generate-namespace-access/test/test-resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-namespace
  labels:
    dh_squad: constellation
